--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "server": "node ../server",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -10,9 +11,18 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.18",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.1",
     "next": "13.4.18",
+    "path": "^0.12.7",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
