--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "path": "^0.12.7",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
   }
